<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/baseline_home_black_48"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cart"
            android:icon="@mipmap/baseline_shopping_cart_black_48"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/manage"
            android:icon="@mipmap/baseline_settings_black_48"
            android:title="@string/menu_manage" />

        <item
            android:id="@+id/contact"
            android:icon="@mipmap/baseline_email_black_48"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/exit"
            android:icon="@mipmap/baseline_exit_to_app_black_48"
            android:title="@string/menu_exit" />
    </group>

</menu>