<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".manage_fragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/manage_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/customers_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/manage_buttons_customers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/products_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/manage_buttons_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customers_button" />

    <Button
        android:id="@+id/sales_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/manage_buttons_sales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/products_button" />

    <Button
        android:id="@+id/queries_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Queries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sales_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>